welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:31: error: Missing closing brace `}' assumed here
    }
    ^